# gnn-excited

./: .gitignore  README.md  environment.yml  pyproject.toml
configs/: a9_10k_gpu.yaml  a9_10k_gpu_long.yaml  a9_1k_gpu.yaml  a9_50k_gpu_long.yaml  a9_50k_gpu_wide.yaml  a9_50k_wide_clip.yaml  a9_full_gpu_long.yaml  a9_full_wide_clip.yaml  a9_full_wide_clip_esdiag.yaml  final_all_s1_wide_clip.yaml  final_all_s1_wide_clip_benchmark.yaml  final_all_s2_energy_specialist_w160_seed17.yaml  final_all_s3_energy_specialist_w160_seed17.yaml  final_all_s4_energy_specialist_w160_seed17.yaml  final_all_s5_clean_random.yaml  final_all_s5_clean_scaffold.yaml  final_all_s5_energy_specialist_w160_seed17.yaml  final_all_s5_shared_heads_unweighted_w128.yaml  final_all_s5_shared_heads_unweighted_w160.yaml  final_all_s5_shared_split_heads_weighted.yaml  final_all_s5_split_heads.yaml  final_all_s5_split_heads_benchmark.yaml  final_all_s5_split_heads_weighted.yaml  final_all_s5_wide_clip.yaml  final_all_s5_wide_clip_benchmark.yaml  overfit_16_cpu.yaml  overfit_16_gpu.yaml  small_cpu.yaml
docs/: ROADMAP.md
notebooks/: 01_schema_inspection.ipynb
scripts/: audit_final_all.sbatch  audit_qcdge.py  backfill_wandb.py  build_final_all_s5_manifest.sbatch  build_manifest.py  compare_runs.py  inspect_targets.py  install_audit_dependencies.sbatch  predict_smiles.py  run_final_all_s1_io_benchmark.sbatch  run_final_all_s1_wide_clip.sbatch  run_final_all_s2_s5_energy_specialists_w160_seed17.sbatch  run_final_all_s5_benchmark.sbatch  run_final_all_s5_clean_random.sbatch  run_final_all_s5_wide_clip.sbatch  (+9 more)
(+23 files in other folders)
