[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gnn-excited"
version = "0.1.0"
description = "DimeNet++ models for QCDGE excited-state prediction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "h5py>=3.10",
  "numpy>=1.26",
  "PyYAML>=6.0",
  "tqdm>=4.66",
]

[project.optional-dependencies]
ml = [
  "torch>=2.3",
  "torch-geometric>=2.5",
  "scipy>=1.11",
  "torch-scatter>=2.1",
  "torch-sparse>=0.6",
]
chem = [
  "rdkit>=2023.9",
]
test = [
  "pytest>=8.0",
]

[project.scripts]
build-qcdge-manifest = "gnn_excited.cli.build_manifest:main"
audit-qcdge-data = "gnn_excited.cli.audit_data:main"
train-dimenet = "gnn_excited.cli.train_dimenet:main"
predict-smiles = "gnn_excited.cli.predict_smiles:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
